--- a/mandalawallpaper/src/main/AndroidManifest.xml
+++ b/mandalawallpaper/src/main/AndroidManifest.xml
@@ -7,16 +7,23 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".ConfigurationActivity"
-            android:label="@string/app_name" >
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name=".MandalaWallpaperIntroActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <service
             android:name="MandalaWallpaperService"
             android:enabled="true"
