--- a/mandalawallpaper/src/main/AndroidManifest.xml
+++ b/mandalawallpaper/src/main/AndroidManifest.xml
@@ -4,18 +4,21 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+
+        android:icon="@drawable/mandala"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
         <activity
             android:name=".ConfigurationActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name=".MandalaWallpaperIntroActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo">
             <intent-filter>
@@ -27,7 +30,7 @@
         <service
             android:name="MandalaWallpaperService"
             android:enabled="true"
-            android:label="Wallpaper Example"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER" >
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" >
