--- a/mandalawallpaper/build.gradle
+++ b/mandalawallpaper/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.codebutchery.mandalawallpaper"
         minSdkVersion 11
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName '1.0.1'
     }
     buildTypes {
         release {
