--- a/mandalawallpaper/build.gradle
+++ b/mandalawallpaper/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.codebutchery.mandalawallpaper"
         minSdkVersion 11
@@ -22,5 +22,5 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:21.0.+'
+    compile 'com.android.support:support-v4:21.0.3'
 }
