--- a/mandalawallpaper/src/main/AndroidManifest.xml
+++ b/mandalawallpaper/src/main/AndroidManifest.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codebutchery.mandalawallpaper" >
+    package="com.codebutchery.mandalawallpaper">
+
+    <uses-feature
+        android:name="android.software.live_wallpaper"
+        android:required="true"></uses-feature>
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/mandala"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".development.DevelopmentActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeFullscreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".ConfigurationActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo" >
-        </activity>
+            android:theme="@android:style/Theme.Holo"></activity>
+        <!--
         <activity
             android:name=".MandalaWallpaperIntroActivity"
-            android:screenOrientation="portrait"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,27 +43,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        -->
+
         <service
-            android:name="MandalaWallpaperService"
+            android:name=".MandalaWallpaperService"
             android:enabled="true"
             android:label="@string/app_name"
-            android:permission="android.permission.BIND_WALLPAPER" >
+            android:permission="android.permission.BIND_WALLPAPER">
             <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService" >
-                </action>
+                <action android:name="android.service.wallpaper.WallpaperService"></action>
             </intent-filter>
 
             <meta-data
                 android:name="android.service.wallpaper"
-                android:resource="@xml/mandala_wallpaper" >
-            </meta-data>
+                android:resource="@xml/mandala_wallpaper"></meta-data>
         </service>
 
     </application>
-
-    <uses-feature
-        android:name="android.software.live_wallpaper"
-        android:required="true" >
-    </uses-feature>
 
 </manifest>
