--- a/mandalawallpaper/build.gradle
+++ b/mandalawallpaper/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 27
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.codebutchery.mandalawallpaper"
-        minSdkVersion 11
-        targetSdkVersion 21
+        minSdkVersion 14
+        targetSdkVersion 27
         versionCode 2
         versionName '1.0.1'
     }
@@ -22,5 +22,5 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:21.0.+'
+    compile 'com.android.support:support-v4:27.1.0'
 }
